# agri-patrol-robot

./: .gitignore  README.md  README_cn.md
a1_shijuedaohang/field_nav_external/: Config.in  README.md  external.desc  external.mk
a1_shijuedaohang/field_nav_external/configs/: field_nav_m1pro_defconfig
a1_shijuedaohang/field_nav_external/scripts/: build_field_nav.sh  rdk_x5_nav_bridge.py
a1_shijuedaohang/field_nav_external/src/field_nav_demo/: CMakeLists.txt
a1_shijuedaohang/field_nav_external/src/field_nav_demo/app_assets/models/: navroad_640x480.m1model
a1_shijuedaohang/field_nav_external/src/field_nav_demo/cmake_config/: Paths.cmake
a1_shijuedaohang/field_nav_external/src/field_nav_demo/include/: field_nav.hpp
a1_shijuedaohang/field_nav_external/src/field_nav_demo/scripts/: run.sh
a1_shijuedaohang/field_nav_external/src/field_nav_demo/src/: image_processor.cpp  main.cpp  navline_detector.cpp  osd_overlay.cpp
a1_shijuedaohang/field_nav_external/tests/: __init__.py  test_rdk_bridge.py
a1_shijuedaohang/field_nav_workspace/: README.md
a1_shijuedaohang/project_docs/: lower_controller_vw_reference.md
a1_shijuedaohang/project_root/: .gitattributes  .gitignore  AGENTS.md  README.md  docker_create_sdk_builder.bat
a1_shijuedaohang/project_tools/: rdk_x5_obsidian_crawler.py
adaptive-fuzzy-pid/Output/: atk_f407.hex
adaptive-fuzzy-pid/User/: main.c  main.h  stm32f4xx_it.c
app/: index.html
rdk_x5/: config.py  detect_and_upload.py  gps_reader.py  rdkx5_detect_upload.py  rdkx5_ghost_cbam_detect.py  uploader.py
server/: requirements.txt  server.py
(+59 files in other folders)
